fixed mobile responsiveness on iPhone portrait

--- a/style/responsiveness.css
+++ b/style/responsiveness.css
@@ -1,3 +1,20 @@
+
+/* ----------- Large Screens----------- */
+@media screen and (min-width: 1300px) {
+
+  .start-modal {
+      background-color: whitesmoke;
+  }
+
+  #select-starting-city.row {
+  background-color: white;
+  width: 1275px;
+  height: 27%;
+  }
+
+}
+
+
 /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
 
 /* Portrait and Landscape */
@@ -20,21 +37,21 @@
     }
 
     header {
-      height: 12vh;
+      height: 15vh;
+      margin-bottom: 10px;
     }
 
     header h1 {
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
    }
 
     #map {
       width: 100%;
-      height: 45vh;
     }
 
     .flight-info{
-      top: 70px;
+      top: 20px;
     }
 
     button {
@@ -66,6 +83,11 @@
     width: 567px;
     padding: 15px;
   }
+
+
+   h1.random-city-text {
+    font-size: 1.8rem;
+   }
 
     #no-flights-message h4 {
       font-size: 1.4rem;
